# StepRR

./: .env  conftest.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
artist_service/: Dockerfile  main.py
booking_service/: Dockerfile  main.py  models.py
booking_service/config/: config.py
booking_service/exceptions/: exception.py
booking_service/repository/: booking.py  db_connection.py
booking_service/routers/: auth.py  booking.py
booking_service/schemas/: booking.py
booking_service/services/: allocation_service.py  booking_service.py
concert_service/: Dockerfile  main.py
exceptions/: exception.py
routers/: artist.py  auth.py  concert.py
schemas/: booking.py
tests/: test_booking_service.py  test_business_rules.py  test_strategies.py
