[project]
name = "ragaroads"
version = "1.0.0"
description = "Raga Roads Artist Allocation Platform - Microservices"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "psycopg2-binary",
    "requests",
    "httpx",
    "python-jose",
    "passlib",
    "pytest",
    "sqlalchemy",
]
